--- a/style/main.css
+++ b/style/main.css
@@ -43,7 +43,7 @@ dark grey - #222
     opacity: 0;
     transition: visibility 0.5s, opacity 0.5s linear;
     overflow: hidden;
-    height: 0%;
+    min-height: 100%;
 }
 
 .tabs__radio:checked+.tabs__label {
@@ -57,8 +57,13 @@ dark grey - #222
     height: 100%;
 }
 
+.white {
+    background-color: #fff;
+    color: #222222 !important;
+}
+
 .black {
-    background: #222;
+    background-color: #222;
     color: #ebebeb !important;
 }
 
