--- a/style/main.css
+++ b/style/main.css
@@ -11,6 +11,7 @@
     color: #222;
     font-family: 'Nanum Gothic', sans-serif;
     text-align: center;
+    background-color: #fff
 }
 
 html,
@@ -18,17 +19,15 @@ body {
     margin: 0;
     height: 100vh;
     width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     overflow: hidden;
 }
 
 .title {
     font-size: 50px;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .wheel {
